sass/web.site/modules/_footer.sass
// careful, the order of this pseudo class is important here
%footer_dark
	background-color: $zon-charcoal
	color: $zon-grey
	a
		color: inherit
		+on-interaction
			color: $zon-lighter-grey

// careful, the order of this pseudo class is important here
%footer_light
	background-color: $zon-lighter-grey
	color: $zon-dark-grey
	a
		color: inherit
		+on-interaction
			color: $black

%footer_column_row
	+clearfix
	display: none
	max-width: remify(420px)
	margin: auto
	+respond-min($break-tablet-min)
		display: block !important
		max-width: none
		padding: 0 $page-padding

%footer_list
	list-style: none
	margin: 0
	padding: remify(20px) $page-padding

%footer_column_list
	float: left
	text-align: left
	width: 50%
	+respond-min($break-tablet-min)
		width: 100%
		float: none
		padding: 0
		text-align: center

%footer_item
	display: block
	+respond-min($break-tablet-min)
		display: inline
	a
		display: inline-block
		padding: remify(10px) 0
		+respond-min($break-tablet-min)
			padding: remify(5px) 0


%footer_dot
	&:after
		font-weight: bold
		margin: 0 .2em
	+respond-min($break-tablet-min)
		&:after
			content: '•'
		&:last-child:after
			content: none

.footer
	font-size: remify(14px)
	margin-top: remify(60px)
	text-align: center

.footer-brand
	display: inline-block
	margin-bottom: remify(20px)
	position: relative
	&,
	&:focus,
	&:hover
		color: $color-zon-logo
	&__logo
		display: block
		height: remify(30px)
		width: remify(280px)
		// in case of extremely high font size on small devices
		max-width: 98vw
		+respond-min($break-tablet-min)
			height: remify(32px)
			width: remify(300px)

.footer-publisher
	@extend %footer_dark
	+respond-min($break-tablet-min)
		background-color: $zon-lighter-grey
		color: $zon-dark-grey
		padding-bottom: remify(20px)
	&__row
		&--extra
			@extend %footer_column_row
			+respond-min($break-tablet-min)
				background-color: $zon-lighter-grey
				color: $zon-dark-grey
				a
					color: inherit
					+on-interaction
						color: $black
	&__list
		@extend %footer_list
	&__row--extra &__list
		@extend %footer_column_list
	&__item
		@extend %footer_item
		@extend %footer_dot
		&--label
			font-weight: bold
			padding: remify(10px) 0
			&:after
				content: none
			+respond-min($break-tablet-min)
				padding: remify(5px) .5em remify(5px) 0
	&__row:first-child
		@extend %footer_light
	&__row:first-child &__list
		font-weight: bold
		padding: remify(9px) $page-padding
	&__row:first-child &__item
		display: inline
		&:after
			content: '•'
		&:last-child:after
			content: none
	&__row--more
		@extend %footer_light
		border-top: 1px solid $zon-light-grey
		+respond-min($break-tablet-min)
			display: none !important
	&__more
		display: block
		padding: remify(20px) $page-padding
		&:after
			+drop_icon()
		&--expanded
			&:after
				+drop_icon($open: true)

.footer-links
	background-color: $zon-charcoal
	border-top: 1px solid $zon-grey
	padding-bottom: $junior
	+respond-min($break-tablet-min)
		border-top: none
		padding-top: remify(20px)
	&__row
		@extend %footer_column_row
		@extend %footer_dark
	&__list
		@extend %footer_list
		@extend %footer_column_list
	&__item
		@extend %footer_item
		@extend %footer_dot
	&__button
		clear: both
		border-top: 1px solid $zon-grey
		margin-top: -1px
		padding: remify(18px) 0
		+respond-min($break-tablet-min)
			border-top: none
			margin-top: 0
	&__linkbutton
		+zon-button-dark

